--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,30 +8,37 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        *{
+        * {
             margin: 0;
             padding: 0;
         }
     </style>
 </head>
+
 <body>
     <!-- header section -->
-    <header class="bg-[#FFF4E7]">
-        <nav class="flex flex-row mt-10 ml-32 mr-32 mb-12">
-            <h1 class="text[#131313] w-2/4 justify-center iiems-center text-[#131313] font-bold text-2xl">G3 Architects</h1>
-            <div class="flex flex-row justify-evenly inset-2">
-                <div>Home</div>
-                <div>About</div>
-                <div>Contact Us  </div>
-                <div> Login</div>
-            </div>    
-         </nav>
-        <div class="flex flex-col justify-center items-center ml-72 mr-72 text-center">
+    <header class="bg-[#FFF4E7] pb-3">
+        <nav class="flex flex-row pt-5 ml-32 mr-32 mb-12 ">
+            <div class="w-1/2 h-1/2"> 
+            <h1 class="text[#131313] justify-center iiems-center text-[#131313] font-bold text-2xl">G3 Architects
+            </h1>
+        </div>
+            <div class="w-1/2 h-1/2">
+            <ul class="flex flex-row ml-32 ">
+                <li class="px-5">Home</li>
+                <li class="px-5">About</li>
+                <li class="px-5">Contact Us </li>
+                <li class="px-5"> Login</li>
+            </ul>
+        </div>
+        </nav>
+        <div class="flex flex-col justify-center items-center ml-72 mr-72 text-center ">
             <h1 class="text-[#131313] font-bold font-work-sans mr-44 ml-44 pl-2 pr-2
-            text-5xl">Brand New 
-                Group of Architects 
-                </h1>
-            <p class="text-[#727272]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            text-5xl mb-2">Brand New
+                Group of Architects
+            </h1>
+            <p class="text-[#727272]">There are many variations of passages of Lorem Ipsum available, but the majority
+                have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
             <button class="bg-[#FF900E] px-3 py-2 rounded-lg mt-4">Explore More</button>
         </div>
         <div class="mx-32 my-8">
@@ -38,8 +46,8 @@
         </div>
     </header>
     <!-- feature section -->
-    <section class="flex justify-center items-center ml-40 gap-6 mx-auto">
-        <div class=" grid grid-cols-2 gap-2">
+    <section class="flex justify-center items-center ml-36 gap-6 mx-auto">
+        <div class=" grid grid-cols-2 gap-3 mt-10">
             <div>
                 <img src="./images/team1.png" alt="">
             </div>
@@ -53,74 +61,85 @@
                 <img src="./images/team4.png" alt="">
             </div>
         </div>
-        <div class="">
+        <div class="ml-28">
             <h1 class="font-bold text-4xl mr-96 text-[#131313]">
                 Quick list of Our <span class=" text-[#FF900E] ">Features</span>
             </h1>
             <p class="text-[#727272] font-extralight text-xs mr-80 my-4">
-                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration in some form, by injected humour, or randomised words which don't look even
             </p>
             <button class="bg-[#FF900E] px-3 py-2 rounded-sm mt-4">Explore More</button>
         </div>
     </section>
     <!-- love and injoy section -->
-    <section class="flex flex-row ">
-        <div class="flex flex-row">
-        <h1 class="text-[#131313] font-bold text-3xl">
-                Features you will love & enjoy
-            </h1>
-            <p class="">
-                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
-            </p>
+    <section class="flex flex-row mt-10 mb-10 justify-between mr-20 ml-20">
+        <div class="w-1/2 h-1/2 ">
+            <div class="mr-4 mx-5 mt-5">
+                <h1 class="text-[#131313] font-bold text-3xl">
+                    Features you will love & enjoy
+                </h1>
+                <p class="text-[#727272]">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even
+                </p>
+            </div>
+            <div class="shadow-md border-lg mr-4 mx-5 mt-5 ">
+                <h3 class="text-xl font-bold text-[#131313]">
+                    Dexktop & Mobile Version
+                </h3>
+                <p class="text-[#727272]">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised...........
+                </p>
+            </div>
+            <div class="mr-4 mx-5 mt-5 shadow-md border-lg">
+                <h3 class="text-xl font-bold text-[#131313]">
+                    Drag & Drop Builder
+                </h3>
+                <p class="text-[#727272]">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised...........
+                </p>
+            </div>
+            <div class="mr-4 mx-5 mt-5 shadow-md border-lg">
+                <h3 class="text-xl font-bold text-[#131313]">
+                    Awesome Modern Design
+                </h3>
+                <p class="text-[#727272]">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised...........
+                </p>
+            </div>
+            <div class="mr-4 mx-5 mt-5 shadow-md border-lg">
+                <h3 class="text-xl font-bold text-[#131313]">
+                    Super Easy to Edit
+                </h3>
+                <p class="text-[#727272]">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised...........
+                </p>
+            </div>
         </div>
         <div class="">
-            <h3 class="">
-                Dexktop & Mobile Version
-            </h3>
-            <p class="">
-                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
-            </p>
+            <div class="">
+                <img src="./images/architect.png" alt="" class="object-cover">
+                <button class="border bg-[#FF900E] px-5 py-7 rounded-lg">10+Year Experience</button>
+            </div>
         </div>
-        <div class="">
-            <h3 class="">
-                Drag & Drop Builder
-            </h3>
-            <p class="">
-                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
-            </p>
-        </div>
-        <div class="">
-            <h3 class="">
-                Awesome Modern Design
-            </h3>
-            <p class="">
-                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
-            </p>
-        </div>
-        <div class="">
-            <h3 class="">
-                Super Easy to Edit
-            </h3>
-            <p class="">
-                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........
-            </p>
-        </div>
-        <div class="">
-            <img src="./images/architect.png" alt="" class="object-cover">
-        </div>                
     </section>
     <!-- fect section -->
     <section class="">
         <h1 class="font-bold text-4xl ml-32 mt-20">
             Some Facts
         </h1>
-        <p class="text-[#727272] mb-20 ml-32 mr-96">
+        <p class="text-[#727272] mb-20 ml-32 ">
             There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
         </p>
-        <div class="flex flex-row justify-evenly items-center ">
+        <div class="flex justify-evenly items-center ">
             <div>
-                <img src="./images/icons/ribon.png" alt="">
-                <h1 class="font-bold text-4xl ">
+                <img class="" src="./images/icons/ribon.png" alt="">
+                <h1 class="font-bold text-4xl flex justify-center items-center">
                     54
                 </h1>
                 <p>
@@ -129,7 +148,7 @@
             </div>
             <div>
                 <img src="images/icons/projects.png" alt="">
-                <h1 class="font-bold text-4xl ">
+                <h1 class="font-bold text-4xl flex justify-center items-center">
                     1458
                 </h1>
                 <p>
@@ -138,7 +157,7 @@
             </div>
             <div>
                 <img src="images/icons/customers.png" alt="">
-                <h1 class="font-bold text-4xl ">
+                <h1 class="font-bold text-4xl flex justify-center items-center">
                     590
                 </h1>
                 <p>
@@ -146,8 +165,8 @@
                 </p>
             </div>
             <div>
-                <img src="images/icons/email.png" alt="">
-                <h1 class="font-bold text-4xl ">
+                <img class="" src="images/icons/email.png" alt="">
+                <h1 class="font-bold text-4xl flex justify-center items-center">
                     22578
                 </h1>
                 <p>
@@ -163,25 +182,26 @@
                 Our Sponspors
             </h1>
             <p>
-                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration.
             </p>
         </div>
-            <div class="flex flex-row my-20 justify-evenly items-center">
-                <img src="./images/sponsors/spotify.png" alt="">
-                <img src="./images/sponsors/amazon.png" alt="">
-                <img src="./images/sponsors/amazon.png" alt="">
-                <img src="./images/sponsors/google.png" alt="">
-                <img src="./images/sponsors/figma.png" alt="">
-            </div>
-        
+        <div class="flex flex-row my-20 justify-evenly items-center">
+            <img src="./images/sponsors/spotify.png" alt="">
+            <img src="./images/sponsors/amazon.png" alt="">
+            <img src="./images/sponsors/google.png" alt="">
+            <img src="./images/sponsors/telerama.png" alt="">
+            <img src="./images/sponsors/figma.png" alt="">
+        </div>
     </section>
     <!-- footer section -->
     <footer class="">
         <div class="">
             <p class="font-thin text-sm mx-40 my-40 rounded-md flex justify-center items-center px-5 py-6 bg-[#FFF4E7]">
-            All rights reserved copyright@2023 startup landing page design
+                All rights reserved copyright@2023 startup landing page design
             </p>
         </div>
     </footer>
 </body>
+
 </html>
