--- a/index.html
+++ b/index.html
@@ -18,155 +18,177 @@
 <body>
     <!-- header section -->
     <header class="bg-[#FFF4E7] pb-3">
-        <nav class="flex flex-row pt-5 ml-32 mr-32 mb-12 ">
-            <div class="w-1/2 h-1/2"> 
-            <h1 class="text[#131313] justify-center iiems-center text-[#131313] font-bold text-2xl">G3 Architects
-            </h1>
-        </div>
-            <div class="w-1/2 h-1/2">
-            <ul class="flex flex-row ml-32 ">
-                <li class="px-5">Home</li>
-                <li class="px-5">About</li>
-                <li class="px-5">Contact Us </li>
-                <li class="px-5"> Login</li>
-            </ul>
-        </div>
+        <nav class="flex flex-row justify-between pt-12 max-w-6xl mx-auto items-center mb-24">
+            <!-- left -->
+            <div class="">
+                <h1 class="text[#131313] font-bold text-[45px]">G3 Architects
+                </h1>
+            </div>
+            <!-- right -->
+            <div class="text-[#424242] text-lg font-medium leading-6">
+                <ul class="flex flex-row ml-32 ">
+                    <li class="px-5">Home</li>
+                    <li class="px-5">About</li>
+                    <li class="px-5">Contact Us </li>
+                    <li class="px-5"> Login</li>
+                </ul>
+            </div>
         </nav>
-        <div class="flex flex-col justify-center items-center ml-72 mr-72 text-center ">
-            <h1 class="text-[#131313] font-bold font-work-sans mr-44 ml-44 pl-2 pr-2
-            text-5xl mb-2">Brand New
+        <div class="flex flex-col justify-center items-center max-w-[862px] mx-auto text-center ">
+            <h1 class="text-[#131313] font-bold font-work-sans  
+            text-[64px] leading-normal mb-5">Brand New <br>
                 Group of Architects
             </h1>
-            <p class="text-[#727272]">There are many variations of passages of Lorem Ipsum available, but the majority
+            <p class="text-[#727272] text-base leading-7 font-normal">There are many variations of passages of Lorem
+                Ipsum available, but the majority
                 have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-            <button class="bg-[#FF900E] px-3 py-2 rounded-lg mt-4">Explore More</button>
+            <button
+                class="bg-[#FF900E] px-6 py-5 rounded-md text-white text-xl font-semibold leading-normal mt-8">Explore
+                More</button>
         </div>
-        <div class="mx-32 my-8">
+        <div class="mb-10 mt-12 max-w-6xl mx-auto">
             <img class="" src="./images/banner.png" alt="">
         </div>
     </header>
     <!-- feature section -->
-    <section class="flex justify-center items-center ml-36 gap-6 mx-auto">
-        <div class=" grid grid-cols-2 gap-3 mt-10">
-            <div>
-                <img src="./images/team1.png" alt="">
+    <section class="flex justify-center items-center max-w-6xl gap-16 mx-auto mt-20">
+        <!-- left -->
+        <div class=" grid grid-cols-2 gap-6 w-7/12">
+            <div class="w-full">
+                <img class="w-full" src="./images/team1.png" alt="">
             </div>
-            <div>
-                <img src="./images/team2.png" alt="">
+            <div class="w-full">
+                <img class="w-full" src="./images/team2.png" alt="">
             </div>
-            <div>
-                <img src="./images/team3.png" alt="">
+            <div class="w-full">
+                <img class="w-full" src="./images/team3.png" alt="">
             </div>
-            <div>
-                <img src="./images/team4.png" alt="">
+            <div class="w-full">
+                <img class="w-full" src="./images/team4.png" alt="">
             </div>
         </div>
-        <div class="ml-28">
-            <h1 class="font-bold text-4xl mr-96 text-[#131313]">
-                Quick list of Our <span class=" text-[#FF900E] ">Features</span>
+        <!-- right -->
+        <div class=" w-5/12">
+            <h1 class="font-bold text-4xl text-[45px] leading-normal">
+                <span class="text-[#727272]  font-medium ">Quick list</span> <span class="text-[#131313] font-bold ">of
+                    Our</span> <br> <span class=" text-[#FF900E] font-bold ">Features</span>
             </h1>
-            <p class="text-[#727272] font-extralight text-xs mr-80 my-4">
+            <p class="text-[#727272] font-normal text-base leading-7 mt-6">
                 There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                 alteration in some form, by injected humour, or randomised words which don't look even
             </p>
-            <button class="bg-[#FF900E] px-3 py-2 rounded-sm mt-4">Explore More</button>
+            <button
+                class="bg-[#FF900E] px-6 py-5 rounded-md text-white text-xl font-semibold leading-normal mt-8">Explore
+                More</button>
         </div>
     </section>
     <!-- love and injoy section -->
-    <section class="flex flex-row mt-10 mb-10 justify-between mr-20 ml-20">
-        <div class="w-1/2 h-1/2 ">
+    <section class="flex flex-row items-center mt-32 mx-auto max-w-6xl justify-between gap-24">
+        <!-- left -->
+        <div class="w-full ">
             <div class="mr-4 mx-5 mt-5">
-                <h1 class="text-[#131313] font-bold text-3xl">
-                    Features you will love & enjoy
-                </h1>
-                <p class="text-[#727272]">
+                <div class="flex flex-row gap-5 items-center">
+                    <div class="w-1 h-24 bg-[#ff900E]"></div>
+                    <h1 class="text-[#131313] font-bold text-[45px] leading-normal">
+                        Features you will <br> love & enjoy
+                    </h1>
+                </div>
+                <p class="text-[#727272] mt-6 font-normal text-base leading-7">
                     There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                     alteration in some form, by injected humour, or randomised words which don't look even
                 </p>
             </div>
-            <div class="shadow-md border-lg mr-4 mx-5 mt-5 ">
-                <h3 class="text-xl font-bold text-[#131313]">
-                    Dexktop & Mobile Version
-                </h3>
-                <p class="text-[#727272]">
-                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                    alteration in some form, by injected humour, or randomised...........
-                </p>
+            <!-- card container -->
+            <div class="flex flex-col gap-5 mt-8">
+                <div class="shadow-xl rounded-md p-7 shadow-slate-300 bg-white">
+                    <h3 class="text-xl font-bold text-[#131313]">
+                        Dexktop & Mobile Version
+                    </h3>
+                    <p class="text-[#727272]">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised...........
+                    </p>
+                </div>
+                <div class="shadow-xl rounded-md p-7 shadow-slate-300 bg-white">
+                    <h3 class="text-xl font-bold text-[#131313]">
+                        Drag & Drop Builder
+                    </h3>
+                    <p class="text-[#727272]">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised...........
+                    </p>
+                </div>
+                <div class="shadow-xl rounded-md p-7 shadow-slate-300 bg-white">
+                    <h3 class="text-xl font-bold text-[#131313]">
+                        Awesome Modern Design
+                    </h3>
+                    <p class="text-[#727272]">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised...........
+                    </p>
+                </div>
+                <div class="shadow-xl rounded-md p-7 shadow-slate-300 bg-white">
+                    <h3 class="text-xl font-bold text-[#131313]">
+                        Super Easy to Edit
+                    </h3>
+                    <p class="text-[#727272]">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised...........
+                    </p>
+                </div>
             </div>
-            <div class="mr-4 mx-5 mt-5 shadow-md border-lg">
-                <h3 class="text-xl font-bold text-[#131313]">
-                    Drag & Drop Builder
-                </h3>
-                <p class="text-[#727272]">
-                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                    alteration in some form, by injected humour, or randomised...........
-                </p>
-            </div>
-            <div class="mr-4 mx-5 mt-5 shadow-md border-lg">
-                <h3 class="text-xl font-bold text-[#131313]">
-                    Awesome Modern Design
-                </h3>
-                <p class="text-[#727272]">
-                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                    alteration in some form, by injected humour, or randomised...........
-                </p>
-            </div>
-            <div class="mr-4 mx-5 mt-5 shadow-md border-lg">
-                <h3 class="text-xl font-bold text-[#131313]">
-                    Super Easy to Edit
-                </h3>
-                <p class="text-[#727272]">
-                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                    alteration in some form, by injected humour, or randomised...........
-                </p>
-            </div>
+            <!-- card container -->
+            <div class="flex flex-col gap5"></div>
         </div>
-        <div class="">
-            <div class="">
+        <!-- right -->
+        <div class="w-full">
+            <div class="relative">
                 <img src="./images/architect.png" alt="" class="object-cover">
-                <button class="border bg-[#FF900E] px-5 py-7 rounded-lg">10+Year Experience</button>
+
+                <div class="bg-[#FF900E] border rounded-lg inline-block text-white leading-normal px-[42px] py-[45px] absolute -bottom-20 -left-14"> <span class="text-[65px] font-bold leading-[70px]">10+Year</span> <br>
+                    <span class="text-2xl font-medium leading-10">Experience</span></div>
             </div>
         </div>
     </section>
     <!-- fect section -->
     <section class="">
-        <h1 class="font-bold text-4xl ml-32 mt-20">
+        <h1 class="font-bold text-[45px] leading-normal max-w-6xl mx-auto mt-[150px]">
             Some Facts
         </h1>
-        <p class="text-[#727272] mb-20 ml-32 ">
-            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+        <p class="text-[#727272] max-w-6xl mx-auto font-normal leading-6 font-base mb-24">
+            There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.
         </p>
-        <div class="flex justify-evenly items-center ">
-            <div>
+        <div class="flex justify-evenly ">
+            <div class="border border-[#FF900E] rounded-[8px] p-10 flex flex-col items-center">
                 <img class="" src="./images/icons/ribon.png" alt="">
-                <h1 class="font-bold text-4xl flex justify-center items-center">
+                <h1 class="font-bold text-[45px] flex justify-center items-center ">
                     54
                 </h1>
                 <p>
                     Awards Winnings
                 </p>
             </div>
-            <div>
+            <div class="border border-[#FF900E] rounded-[8px] p-10 flex flex-col items-center">
                 <img src="images/icons/projects.png" alt="">
-                <h1 class="font-bold text-4xl flex justify-center items-center">
+                <h1 class="font-bold text-[45px] flex justify-center items-center ">
                     1458
                 </h1>
                 <p>
                     Project Finished
                 </p>
             </div>
-            <div>
+            <div class="border border-[#FF900E] rounded-[8px] p-10 flex flex-col items-center">
                 <img src="images/icons/customers.png" alt="">
-                <h1 class="font-bold text-4xl flex justify-center items-center">
+                <h1 class="font-bold text-[45px] flex justify-center items-center ">
                     590
                 </h1>
                 <p>
                     Clients Worked
                 </p>
             </div>
-            <div>
+            <div class="border border-[#FF900E] rounded-[8px] p-10 flex flex-col items-center">
                 <img class="" src="images/icons/email.png" alt="">
-                <h1 class="font-bold text-4xl flex justify-center items-center">
+                <h1 class="font-bold text-[45px] flex justify-center items-center ">
                     22578
                 </h1>
                 <p>
@@ -181,8 +203,8 @@
             <h1 class="font-bold text-4xl mb-4">
                 Our Sponspors
             </h1>
-            <p>
-                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+            <p class="text-center font-normal text-base leading-6">
+                There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered
                 alteration.
             </p>
         </div>
